--- a/ngdemo.html
+++ b/ngdemo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="scotchApp">
+<html ng-app="ngDemoApp">
 
 <head>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
@@ -9,7 +9,6 @@
   <script src="scripts.js"></script>
 </head>
 
-<!-- define angular controller -->
 <body ng-controller="mainController">
 
   <nav class="navbar navbar-default">
