--- a/ngdemo.html
+++ b/ngdemo.html
@@ -1,3 +1,6 @@
+//  Overall design based on tutorial at https://scotch.io/tutorials/single-page-apps-with-angularjs-routing-and-templating
+//  Chris Sevilleja 2013 
+
 <!DOCTYPE html>
 <html ng-app="ngDemoApp">
 
@@ -6,7 +9,6 @@
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
-  <script src="ngDemo.js"></script>
 </head>
 
 <body ng-controller="mainController">
@@ -43,8 +45,11 @@
   </div>
   
   <footer class="text-center">
- 
+    <h3>Mike McGuire &#169;  2016</h3>
   </footer>
   
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="ngDemo.js"></script>
 </body>
 </html>
