--- a/ngdemo.html
+++ b/ngdemo.html
@@ -2,7 +2,7 @@
 //  Chris Sevilleja 2013 
 
 <!DOCTYPE html>
-<html ng-app="ngDemoApp">
+<html ng-app="ngDemo">
 
 <head>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
@@ -22,7 +22,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><span>Angular Demo</span></a>
+                <a class="navbar-brand" href="#"><span>Angular Skeleton</span></a>
             </div>
 
             <div class="collapse navbar-collapse">
@@ -37,11 +37,9 @@
 
 
   <div id="main">
-  
     <!-- angular templating -->
 		<!-- this is where content will be injected -->
     <div ng-view></div>
-    
   </div>
   
   <footer class="text-center">
@@ -50,6 +48,6 @@
   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="ngDemo.js"></script>
+    <script src="ngdemo.html"></script>
 </body>
 </html>
