add input display page

--- a/ngdemo.html
+++ b/ngdemo.html
@@ -12,7 +12,6 @@
 </head>
 
 <body ng-controller="mainController">
-    
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -30,6 +29,7 @@
                     <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
                     <li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
                     <li><a href="#contact"><i class="fa fa-comment"></i> Contact</a></li>
+                    <li><a href="#input"><i class="fa fa-shield"></i> Input</a></li>
                 </ul>
             </div>
         </div>
