working on array reading

--- a/ngdemo.html
+++ b/ngdemo.html
@@ -27,9 +27,9 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
-                    <li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
-                    <li><a href="#contact"><i class="fa fa-comment"></i> Contact</a></li>
-                    <li><a href="#input"><i class="fa fa-shield"></i> Input</a></li>
+                    <li><a href="#cost"><i class="fa fa-usd"></i> Cost</a></li>
+                    <li><a href="#array"><i class="fa fa-list"></i> Array</a></li>
+                    <li><a href="#input"><i class="fa fa-keyboard-o"></i> Input</a></li>
                 </ul>
             </div>
         </div>
