tidy up and add CSS file

--- a/ngdemo.html
+++ b/ngdemo.html
@@ -7,6 +7,7 @@
 <head>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" type="text/css" href="ngDemo.css">
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
 </head>
@@ -35,11 +36,8 @@
         </div>
     </nav>
 
-
   <div id="main">
-    <!-- angular templating -->
-		<!-- this is where content will be injected -->
-    <div ng-view></div>
+    <div ng-view></div> <!-- this is where content will be injected -->
   </div>
   
   <footer class="text-center">
