--- a/pages/array.html
+++ b/pages/array.html
@@ -1,9 +1,8 @@
 <div class="jumbotron text-center">
 	<h1>Read from an Array</h1>
 	
-    <div  >
-        <h4>{{chars.characters[0].firstName}}</h4>
-        <h4>{{chars.characters[0].lastName}}</h4>
+    <div ng-repeat="character in ngDemo.characters">
+        <h4>{{character.firstName}}</h4>
+        <h4>{{character.lastName}}</h4>
     </div>
     
-<!--    ng-repeat = "character in character"-->
