--- a/ngdemo.html
+++ b/ngdemo.html
@@ -12,7 +12,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
 </head>
 
-<body ng-controller="mainController">
+<body ng-controller="mainController as main">
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
