--- a/pages/array.html
+++ b/pages/array.html
@@ -1,7 +1,6 @@
 <div class="jumbotron text-center">
 	<h1>Read from an Array</h1>
-	
-    <div ng-repeat="character in ngDemo.characters">
+    <div ng-repeat="character in main.characters">
         <h4>{{character.firstName}}</h4>
         <h4>{{character.lastName}}</h4>
     </div>
