--- a/pages/array.html
+++ b/pages/array.html
@@ -1,7 +1,13 @@
 <div class="jumbotron text-center">
 	<h1>Read from an Array</h1>
     <div ng-repeat="character in main.characters">
+        <h4>Why doesn't this work?</h4>
+        <p>{{ message }}</p>
+
         <h4>{{character.firstName}}</h4>
         <h4>{{character.lastName}}</h4>
     </div>
+</div>
+
+
     
