--- a/pages/array.html
+++ b/pages/array.html
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
 	<h1>Read from an Array</h1>
-    <div ng-repeat="character in main.characters">
+    <div ng-repeat="character in characters">
         <h4>Why doesn't this work?</h4>
         <p>{{ message }}</p>
 
