--- a/ngdemo.html
+++ b/ngdemo.html
@@ -35,11 +35,10 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
                     <li><a href="#tanktops"><i class="fa fa-sun-o"></i> tank Tops</a></li>
-                    <li><a href="#sweater"><i class="fa fa-tint"></i> Sweaters</a></li>
+                    <li><a href="#sweater"><i class="fa fa-asterisk"></i> Sweaters</a></li>
                     <li><a href="#pant"><i class="fa fa-asterisk"></i> Pants</a></li>
                     <li><a href="#shoe"><i class="fa fa-twitter"></i> Shoes</a></li>
-                    <li><a href="#cost"><i class="fa fa-usd"></i> Coupons</a></li>
-                    <li><a href="#input"><i class="fa fa-shopping-bag"></i> Checkout</a></li>
+                    <li><a href="#accessories"><i class="fa fa-twitter"></i> Accessories</a></li>
                 </ul>
             </div>
         </div>
