--- a/pages/accessories.html
+++ b/pages/accessories.html
@@ -1,11 +1,10 @@
 <div class="jumbotron text-center">
-	<h1>Pants</h1>
-    <div ng-repeat="character in characters">
-                <h4></h4>
+	<h1>Accessories!</h1>
+    <div ng-repeat="sweaterclothes in sweaterclothes">
+        <h4></h4>
         <h3>{{sweaterclothes.articleOfClothing}}</h3>
         <h5>{{sweaterclothes.price}}</h5>
         <img ng-src="{{sweaterclothes.image}}">
         <h4></h4>
     </div>
 </div>
-
