--- a/pages/sweaters.html
+++ b/pages/sweaters.html
@@ -1,5 +1,5 @@
 <div class="jumbotron text-center">
-	<h1>Sweaters!</h1>
+	<h1>Sweaters and Sweatshirts!</h1>
     <div ng-repeat="sweaterclothes in sweaterclothes">
         <h4></h4>
         <h3>{{sweaterclothes.articleOfClothing}}</h3>
