--- a/pages/shoe.html
+++ b/pages/shoe.html
@@ -1,7 +1,10 @@
 <div class="jumbotron text-center">
-	<h1>Spring Outfits</h1>
+	<h1>Shoes</h1>
     <div ng-repeat="character in characters">
-        <h4></h4>
+                <h4></h4>
+        <h3>{{sweaterclothes.articleOfClothing}}</h3>
+        <h5>{{sweaterclothes.price}}</h5>
+        <img ng-src="{{sweaterclothes.image}}">
         <h4></h4>
     </div>
 </div>
