--- a/pages/accessories.html
+++ b/pages/accessories.html
@@ -1,10 +1,10 @@
 <div class="jumbotron text-center">
 	<h1>Accessories!</h1>
-    <div ng-repeat="sweaterclothes in sweaterclothes">
+    <div ng-repeat="accessories in accessories">
         <h4></h4>
-        <h3>{{sweaterclothes.articleOfClothing}}</h3>
-        <h5>{{sweaterclothes.price}}</h5>
-        <img ng-src="{{sweaterclothes.image}}">
+        <h3>{{accessories.articleOfClothing}}</h3>
+        <h5>{{accessories.price}}</h5>
+        <img ng-src="{{accessories.image}}">
         <h4></h4>
     </div>
 </div>
