--- a/pages/pant.html
+++ b/pages/pant.html
@@ -1,10 +1,10 @@
 <div class="jumbotron text-center">
 	<h1>Pants</h1>
-    <div ng-repeat="character in characters">
+    <div ng-repeat="pantclothes in pantclothes">
                 <h4></h4>
-        <h3>{{sweaterclothes.articleOfClothing}}</h3>
-        <h5>{{sweaterclothes.price}}</h5>
-        <img ng-src="{{sweaterclothes.image}}">
+        <h3>{{pantclothes.articleOfClothing}}</h3>
+        <h5>{{pantclothes.price}}</h5>
+        <img ng-src="{{pantclothes.image}}">
         <h4></h4>
     </div>
 </div>
