--- a/pages/shoe.html
+++ b/pages/shoe.html
@@ -1,10 +1,10 @@
 <div class="jumbotron text-center">
 	<h1>Shoes</h1>
-    <div ng-repeat="character in characters">
+    <div ng-repeat="shoes in shoes">
                 <h4></h4>
-        <h3>{{sweaterclothes.articleOfClothing}}</h3>
-        <h5>{{sweaterclothes.price}}</h5>
-        <img ng-src="{{sweaterclothes.image}}">
+        <h3>{{shoes.articleOfClothing}}</h3>
+        <h5>{{shoes.price}}</h5>
+        <img ng-src="{{shoes.image}}">
         <h4></h4>
     </div>
 </div>
