--- a/pages/tanktops.html
+++ b/pages/tanktops.html
@@ -1,10 +1,10 @@
 <div class="jumbotron text-center">
 	<h1>Tank Tops!</h1>
-    <div ng-repeat="character in characters">
+    <div ng-repeat="tanktopclothes in tanktopclothes">
               <h4></h4>
-        <h3>{{sweaterclothes.articleOfClothing}}</h3>
-        <h5>{{sweaterclothes.price}}</h5>
-        <img ng-src="{{sweaterclothes.image}}">
+        <h3>{{tanktopclothes.articleOfClothing}}</h3>
+        <h5>{{tanktopclothes.price}}</h5>
+        <img ng-src="{{tanktopclothes.image}}">
         <h4></h4>
     </div>
 </div>
